 - [FIXED]		Fix for Chart Size issues
 - [ADDED]		Text describing Other Senders in Chart Page
 - [ADDED]		Share app added in the menu 
 - [ADDED]		Experimental support for French language
 - [ADDED]		Section Heading styles for section headings
 
MessageCounter 2.0.96 [August 2013]
 - [CHANGED]	Color theme for chart
 - [CHANGED]	Chart starts from 12'O clock position
 - [CHANGED]	Start of Test in chart getting clipped  

MessageCounter 2.0.99 [August 2013]
 - [CHANGED]	Built against API 18
 - [CHANGED]	Colors in chart
 - [ADDED]		Share this app
 - [ADDED]		Support for large screens	
 
MessageCounter 2.0.102 [November 2013]
 - [ADDED]		Support for Spanish language 
 - [ADDED]		Share icon in actionbar

------------------------------------
	Version 2.1
------------------------------------

MessageCounter 2.1.20 [December 2013]
 - [CHANGED]	Supports API 8 and above
 - [CHANGED]	ViewPager implementation to support more devices
 - [CHANGED]	Layout Improvements
 - [ADDED]		Minor animations
 - [CHANGED]	About page moved as a fragment from menu
 - [OPTIMIZED]	Operations
 
 MessageCounter 2.1.25 [December 2013]
 - [CHANGED]	Disabled orientation change
 - [CHANGED]	Simplified message counts at a glance
 - [OPTIMIZED]	Code and layout
 - [CHANGED]	Text block highlight color
 
 MessageCounter 2.1.28 [December 2013]
  - [CHANGED]	Animation durtions
  - [ADDED]		Display draft messages
  - [CHANGED]	Message counts at a glance
  
 MessageCounter 2.1.30 [December 2013]
 - [ADDED]		Preference screen and message from non contact preference
 - [ADDED]		Filter out non contact messages from chart screen
 
------------------------------------
	Version 3.0
------------------------------------

MessageCounter 3.0.20 [January 2014]
 - [CHANGED]	App Icon and color scheme to holo violet
 - [CHANGED]	About screen layout
 - [ADDED]		Sent SMS Counter
 - [CHANGED]	Updated App Icon and color scheme to holo blue
 - [ADDED]		ShareActionProvider in ActionBar
 - [ADDED]		New\Different ActionBar logo