@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
-    android:versionCode="200"
+    android:versionCode="210"
     android:versionName="3.0" >
 
     <uses-sdk
