@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
-android.library.reference.1=..\\..\\..\\..\\..\\adt-bundle\\sdk\\extras\\android\\support\\v7\\appcompat
-android.library.reference.2=..\\..\\..\\ae-apps-library\\library\\AeAppsLibrary
+target=android-17
+android.library.reference.1=..\\..\\..\\ae-apps-library\\library\\AeAppsLibrary
+android.library.reference.2=../../support-libs/android-support-v7-appcompat
