@@ -58,7 +58,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_medium"
             android:layout_marginTop="@dimen/margin_medium"
             android:padding="@dimen/padding_small" >
 
@@ -77,17 +76,41 @@
                 android:text="@string/empty_text"
                 android:textSize="18sp" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:padding="@dimen/padding_small" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:text="Cycle end date"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/currentCycleEndDateText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="@string/empty_text"
+                android:textSize="18sp" />
+        </RelativeLayout>
     </LinearLayout>
 
     <TextView
         android:id="@+id/startCountingLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
         android:drawableLeft="@android:drawable/ic_menu_preferences"
         android:drawablePadding="@dimen/padding_medium"
         android:padding="@dimen/padding_medium"
+        android:textSize="16sp"
+        android:layout_gravity="center_vertical"
         android:text="To keep track of sent messages count, enable and set the details in settings" >
-
     </TextView>
 
 </LinearLayout>
